<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingDeviceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="更新logo"
                android:textColor="#FFF"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/device_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/device_ip"
        app:layout_constraintBottom_toBottomOf="@id/edit_device_ip"
        app:layout_constraintEnd_toStartOf="@id/edit_device_ip"
        app:layout_constraintTop_toTopOf="@id/edit_device_ip" />

    <EditText
        android:id="@+id/edit_device_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_50dp"
        android:layout_marginBottom="@dimen/activity_10dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/edit_subnet_mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subnet_mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/subnet_mask"
        app:layout_constraintBottom_toBottomOf="@id/edit_subnet_mask"
        app:layout_constraintEnd_toStartOf="@id/edit_subnet_mask"
        app:layout_constraintTop_toTopOf="@id/edit_subnet_mask" />

    <EditText
        android:id="@+id/edit_subnet_mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_10dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/edit_gateway"
        app:layout_constraintEnd_toEndOf="@id/edit_gateway"
        app:layout_constraintStart_toStartOf="@id/edit_gateway" />

    <TextView
        android:id="@+id/gateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/gateway"
        app:layout_constraintBottom_toBottomOf="@id/edit_gateway"
        app:layout_constraintEnd_toStartOf="@id/edit_gateway"
        app:layout_constraintTop_toTopOf="@id/edit_gateway" />

    <EditText
        android:id="@+id/edit_gateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_50dp"
        android:layout_marginBottom="@dimen/activity_10dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/edit_dns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/dns"
        app:layout_constraintBottom_toBottomOf="@id/edit_dns"
        app:layout_constraintEnd_toStartOf="@id/edit_dns"
        app:layout_constraintTop_toTopOf="@id/edit_dns" />

    <EditText
        android:id="@+id/edit_dns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_50dp"
        android:layout_marginBottom="@dimen/activity_30dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/dhcp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dhcp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/dhcp"
        app:layout_constraintBottom_toBottomOf="@id/layout1"
        app:layout_constraintEnd_toStartOf="@id/edit_dns"
        app:layout_constraintTop_toTopOf="@id/layout1" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/is_dhcp_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_20dp"
            android:entries="@array/is_dhcp_mod" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/dp_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintTop_toTopOf="@id/layout1">

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_100dp"
            android:background="@drawable/radius_background"
            android:text="@string/connect"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_70dp"
            android:layout_marginEnd="@dimen/activity_100dp"
            android:background="@drawable/radius_background"
            android:text="@string/restart"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_100dp"
            android:layout_marginTop="@dimen/activity_70dp"
            android:background="@drawable/radius_background"
            android:text="@string/reset"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/setip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_100dp"
            android:background="@drawable/radius_background"
            android:text="@string/setip"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>