<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddDeviceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="更新logo"
                android:textColor="#FFF"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/device_name"
        app:layout_constraintBottom_toBottomOf="@id/edit_device_name"
        app:layout_constraintEnd_toStartOf="@id/edit_device_name"
        app:layout_constraintTop_toTopOf="@id/edit_device_name" />

    <EditText
        android:id="@+id/edit_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_40dp"
        android:layout_marginStart="@dimen/dp_40"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/constrain1"
        app:layout_constraintEnd_toEndOf="@id/constrain1"
        app:layout_constraintStart_toStartOf="@id/constrain1" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_the_logo"
        app:layout_constraintEnd_toEndOf="@id/device_name"
        app:layout_constraintStart_toStartOf="@id/device_name"
        app:layout_constraintTop_toTopOf="@id/constrain1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain1"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_150"
        android:background="#bfbfbf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:src="@mipmap/add_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/commit_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/radius_background"
        android:text="@string/commit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constrain1" />

</androidx.constraintlayout.widget.ConstraintLayout>